chore: 초기 내용 세팅

--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -2,17 +2,17 @@
 
 - type: github
   icon: "fab fa-github"
-
-- type: twitter
-  icon: "fa-brands fa-x-twitter"
+  url: "https://github.com/okorion"
 
 - type: email
   icon: "fas fa-envelope"
   noblank: true # open link in current tab
+  url: "mailto:ok.or.orion@gmail.com"
 
 - type: rss
   icon: "fas fa-rss"
   noblank: true
+  url: "/feed.xml"
 # Uncomment and complete the url below to enable more contact options
 #
 # - type: mastodon
