feat: kramdown mathjax 마크다운 수식 기능 추가

--- a/_config.yml
+++ b/_config.yml
@@ -155,10 +155,14 @@ paginate: 10
 # The base URL of your site
 baseurl: "/tech-blog"
 
+# Enable MathJax rendering via Kramdown
+markdown: kramdown
+
 # ------------ The following options are not recommended to be modified ------------------
 
 kramdown:
   footnote_backlink: "&#8617;&#xfe0e;"
+  math_engine: mathjax
   syntax_highlighter: rouge
   syntax_highlighter_opts: # Rouge Options › https://github.com/jneen/rouge#full-options
     css_class: highlight
